--- a/assets/localization/ru.json
+++ b/assets/localization/ru.json
@@ -2,5 +2,9 @@
     "notebook": "Блокнот",
     "notes": "Здесь будут ваши заметки",
     "settings": "Настройки",
-    "language": "Язык"
+    "language": "Язык",
+    "note": "Заметка",
+    "description": "Описание",
+    "title": "Название",
+    "notitle": "Нет названия"
 }
