--- a/assets/localization/ru.json
+++ b/assets/localization/ru.json
@@ -6,5 +6,9 @@
     "note": "Заметка",
     "description": "Описание",
     "title": "Название",
-    "notitle": "Нет названия"
+    "notitle": "Нет названия",
+    "alphabet": "Алфавит",
+    "newest": "Новее",
+    "oldest": "Старее"
+
 }
